--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow:100,400,500,600,700');
 * {
     margin:0;
     padding:0
@@ -21,7 +20,13 @@ ul {
 ul{
     margin-bottom: 0;
 }
-li {
+
+.install-discription ul {
+    padding-left: 50px;
+    margin-bottom: 30px;
+}
+
+.main_menu li {
     list-style:none;
     margin: 0;
     padding: 0;
@@ -33,7 +38,7 @@ p{
     margin:0;
 }
 body {
-    font-family: 'Barlow', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 16px;
     line-height: 26px;
     color: #525252;
@@ -167,9 +172,7 @@ section {
 .main_menu .nav_menu li.active{
     background-color: #efefef;
 }
-.main_menu .nav_menu li a:hover{
-	padding-left: 20px;
-}
+
 .main_menu .nav_menu li a i{
 	margin-right: 10px;
 }
@@ -200,7 +203,6 @@ section {
 
 /* Start intro css*/
 .document_content{
-    width: 90%;
     padding: 0 20px;
 }
 .document-title{
@@ -290,6 +292,21 @@ section {
     border-radius: 4px;
     color: white;
 }
+
+.p_info {
+    padding-left: 60px;
+    position: relative;
+}
+.p_info:before {
+    content: "\f059";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 400;
+    position: absolute;
+    left: 10px;
+    font-size: 30px;
+    top: 20px;
+}
+
 .badge-primary {
     background-color: #007692;
 }
