--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,19 @@ ul{
     margin-bottom: 30px;
 }
 
+.install-discription ul.no-bullets {
+    list-style: none;
+    padding-left: 0;
+}
+
+.install-discription ul.no-bullets li {
+    padding: 10px 0;
+}
+
+.install-discription ul.no-bullets li img {
+    margin: 20px 0;
+}
+
 .main_menu li {
     list-style:none;
     margin: 0;
@@ -129,19 +142,16 @@ section {
 	background: #fefefe;
         position: fixed;
 	height: 100%;
-	width:  21%;
-	padding: 20px;
+	width:  30%;
+	padding: 20px 0;
 	box-shadow: 0 0 1px #e7e7e7;
 }
-.sidenav_wrapper:hover {
+.sidenav_wrapper {
     overflow-y: scroll;
 }
-.sidenav_wrapper:hover .b-text {
-    margin-right: -17px;
-}
+
 .brand-top{
 	border-bottom: 1px solid #e7e7e7;
-	padding: 30px 10px; 
 }
 .b-text{
 	margin-bottom: 30px;
@@ -172,7 +182,9 @@ section {
 .main_menu .nav_menu li.active{
     background-color: #efefef;
 }
-
+.installation img {
+    width: 100%;
+}
 .main_menu .nav_menu li a i{
 	margin-right: 10px;
 }
